<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/new_customer_information_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTitleLabel"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <TextView
                android:text="@string/first_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewFirstNameLabel"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"
                android:textAllCaps="false"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/firstNameInput"
                android:textSize="14sp"/>

            <TextView
                android:text="@string/last_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLastNameLabel"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/lastNameInput"
                android:textSize="14sp"/>

            <TextView
                android:text="@string/contact_no_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewContactNoLabel"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/contactNoInput"
                android:textSize="14sp"/>

            <TextView
                android:text="@string/email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEmailLabel"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/emailInput"
                android:textSize="14sp"/>

            <TextView
                android:text="@string/member_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewMemberTypeLabel"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/memberTypeInput"
                android:textSize="14sp"/>


            <TextView
                android:text="@string/address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAddressLabel"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/addressInput"
                android:textSize="14sp"/>


            <Button
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSave"
                android:layout_margin="25dp"
                android:padding="10dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:background="@color/colorButton"
                android:textColor="#fff"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>